setup new model structure.

--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -6,3 +6,5 @@ DATABASE_PORT: <YOUR DATABASE PORT>
 SLACK_WEBHOOK_URL: <YOUR SLACK_WEBHOOK URL>
 GOOGLE_CLIENT_ID: <YOUR GOOGLE CLIENT ID>
 GOOGLE_CLIENT_SECRET: <YOUR GOOGLE CLIENT SECRET>
+AWS_ACCESS_KEY_ID: <YOUR AWS ACCESS KEY ID>
+AWS_SECRET_ACCESS_KEY: <YOUR AWS SECRET ACCESS KEY>
