--- a/config/env.example.yml
+++ b/config/env.example.yml
@@ -8,3 +8,4 @@ GOOGLE_CLIENT_ID: <YOUR GOOGLE CLIENT ID>
 GOOGLE_CLIENT_SECRET: <YOUR GOOGLE CLIENT SECRET>
 AWS_ACCESS_KEY_ID: <YOUR AWS ACCESS KEY ID>
 AWS_SECRET_ACCESS_KEY: <YOUR AWS SECRET ACCESS KEY>
+JWT_SECRET_KEY: <YOUR JWT SECRET KEY>
